# mono-vo

./: .gitignore  CMakeLists.txt  README.md  vc10.bat
src/: test.cpp  visodo.cpp  vo_features.h
